# ATCS-NeuralNetworks

./: .gitmodules  CMakeLists.txt  OptionI  README.md  a.out  config.txt  main.cpp  main.h
AB1Network/: AB1Network.cpp  a.out
ABCBackpropNetwork/: ABCBackPropagation.cpp  TrainingAnswers.txt  WeightsI  a.out  config.toml
ABCBackpropNetwork/3BC/: TestData3BC.txt  WeightsIII  WeightsIIII  WeightsIIIII  WeightsIIIIII  WeightsIIIIIII  WeightsIIIIIIII  WeightsIIIIIIIII  WeightsIIIIIIIIII  WeightsIIIIIIIIIII  WeightsIIIIIIIIIIII  config3BC.toml
ABCBackpropNetwork/AB1/: WeightsII  configAB1.toml
ABCD2LayerNetwork/: ABCDNetwork.cpp  TrainingData.txt  WeightsI  a.out  config.toml  config2.toml
ABCD2LayerNetwork/OLD/: ABCDNetworkOLD.cpp  WeightsI  WeightsII  WeightsIII  WeightsIIII  WeightsIIIII  WeightsIIIIII  WeightsIIIIIII  WeightsIIIIIIII  WeightsIIIIIIIII  WeightsIIIIIIIIII  a.out  config.toml
ABCNetwork/: ABCNetwork.cpp  a.out
A_B_1_Network/: A_B_1_Network.cpp  A_B_1_Network.h
N_Layer_Network/: CMakeLists.txt  NLayerNetwork.cpp  a.out  config.toml  configAB1.toml
N_Layer_Network/BooleanAlgebra/: TrainingAnswersAB1.txt  WeightsI  configAB1.toml
N_Layer_Network/Images/: TestData.txt  TrainingData.txt  divideeverynumber.py
N_Layer_Network/Images/Image processing/ImageProcessingHEIC/: 1_1.HEIC  1_3.HEIC  2_1.HEIC  2_2.HEIC  2_4.HEIC  3_2.HEIC  4_2.HEIC  4_4.HEIC  4_5.HEIC  5_2.HEIC  5_3.HEIC  6_1.HEIC  6_5.HEIC
N_Layer_Network/Images/Integer/: TestData.txt  TrainingData.txt
N_Layer_Network/Images/Old/varunBins/: binList.txt
N_Layer_Network/Images/Old/varunBinsModded/: binModList.txt
N_Layer_Network/Images/OldData/: TrainingData2.txt
N_Layer_Network/Images/varun/varunBinsModded/: testing.txt  training.txt
N_Layer_Network/OLDImages/: TestData.txt  TrainingAnswers2.txt  divideeverynumber.py
N_Layer_Network/OLDImages/Data/: TestData.txt  TrainingAnswers.txt  TrainingData.txt
N_Layer_Network/OLDImages/ImagesProcessed/varunBinsModded/: binModList.txt
N_Layer_Network/OLDImages/Old/Image processing/ImageProcessingBMP/: gay.txt
N_Layer_Network/OLDImages/Old/Image processing/ImageProcessingHEIC/: 1_2.HEIC  1_4.HEIC  1_5.HEIC  2_3.HEIC  2_5.HEIC  3_1.HEIC  3_3.HEIC  3_4.HEIC  3_5.HEIC  4_1.HEIC  4_3.HEIC  5_1.HEIC  5_4.HEIC  5_5.HEIC  6_2.HEIC  6_3.HEIC  6_4.HEIC
N_Layer_Network/OLDImages/Old/varunBinsModded/: 2_2.txt
XOR_in_Excel/: 2_2_1_Network_Archive_OR_XOR.xlsm  2_2_1_Network_Archive_OR_XOR.xlsx  VarunThvar_2_2_1_Network.xlsx  VarunThvar_XOR_in_Excel.xlsx
